# Microsoft-Defender-for-Cloud

./: CODEOWNERS
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/: .gitignore  README.md  pyproject.toml
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/docs/: ARCHITECTURE.md  DEPLOYMENT.md  TSD-MDC-ADO-001-v2.0.md
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/infra/: main.bicep  main.json
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/infra/ado/: provision_ado_process.py
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/infra/modules/: app-insights.bicep  function-app.bicep  key-vault.bicep  logic-app.bicep  managed-identity.bicep  storage.bicep
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/infra/parameters/: dev.bicepparam.example  prod.bicepparam.example  test.bicepparam.example
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/scripts/: check-runs.sh
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/src/function/: function_app.py  host.json  local.settings.json.example  pyproject.toml  requirements.txt
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/src/function/activities/: __init__.py  assign_recommendation.py  build_triage_briefing.py  create_or_update_work_item.py  dedupe_lookup.py  gather_enrichment.py  resolve_owner.py
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/src/logic-app/: workflow.json
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/tests/: conftest.py
Workflow automation/MDC-Recommendations-to-AzureDevOps-Connector/tests/unit/: test_function_app.py
(+34 files in other folders)
