[project]
name = "mdc-ado-connector"
version = "0.1.0"
description = "Tooling root for the MDC -> ADO Connector (lint, type-check, test)."
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "pytest-cov",
  "respx",
  "freezegun",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src/function", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
# Azure Functions / Durable trigger decorators are untyped (the durable extension ships
# no py.typed); disable just this check so strict passes on decorated trigger functions.
disable_error_code = ["untyped-decorator"]
# src/function is the Functions app root; its subfolders import as top-level packages.
mypy_path = "src/function"
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "azure",
  "azure.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src/function"]
